Fix chat pane overflow

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -367,7 +367,7 @@
     #gotv-container .gotv-layout .chat-pane
         width: 100vw
         flex: 1 1 auto
-        overflow-y: auto
+        overflow: hidden
         themed background-color bg
         transition: transform 0.3s ease-in-out
         transform: translateY(0)
